--- a/style.css
+++ b/style.css
@@ -66,5 +66,4 @@ h1 {
 /* Màu sắc cho các nút */
 .facebook { background-color: #1877f2; }
 .instagram { background-color: #e1306c; }
-.twitter { background-color: #1da1f2; }
-.linkedin { background-color: #0077b5; }
+.discord { background-color: #1da1f2; }
